// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Psammead test helpers should match the snapshot for the test component 1`] = `
<div>
  <main>
    <h1>
      Hello I am a test component
    </h1>
  </main>
</div>
`;

exports[`Psammead test helpers should match the snapshot for the test component 2`] = `
<div>
  <h1>
    Hello I am a test component
  </h1>
  <p>
    I am some test text.
  </p>
</div>
`;
